--- a/public/html/home.html
+++ b/public/html/home.html
@@ -10,7 +10,7 @@
     <h1 class="test">fawwafaw</h1>
     <header>
         <div>
-            <h1>привет мир</h1>
+            <h1>не можешь</h1>
         </div>
     </header>
 </body>
